dfir_rs/tests/compile-fail-stable/surface_map_badtypes.stderr
error[E0308]: mismatched types
 --> tests/compile-fail-stable/surface_map_badtypes.rs:5:36
  |
5 |         source_iter(0..10) -> map(|(a, b)| a + b) -> for_each(std::mem::drop);
  |                                    ^^^^^^
  |                                    |
  |                                    expected integer, found `(_, _)`
  |                                    expected due to this
  |
  = note: expected type `{integer}`
            found tuple `(_, _)`

error[E0282]: type annotations needed
 --> tests/compile-fail-stable/surface_map_badtypes.rs:5:54
  |
5 |         source_iter(0..10) -> map(|(a, b)| a + b) -> for_each(std::mem::drop);
  |                                                      ^^^^^^^^ cannot infer type
